infrastructure/network/network.yml
Description: >
  Udacity nanodegree: DevOps Engineer
  Student: Florian Kneist
  Project: #7 (capstone)

Parameters:

  EnvPrefix:
    Description: Prefix for resource names
    Type: String

  VpcCIDRBlock:
    Description: CIDR block for this VPC
    Type: String
    Default: 10.0.0.0/16

Resources:

  VPC: 
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDRBlock
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags: 
        - Key: Name
          Value: !Ref EnvPrefix

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvPrefix
          
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Select [ 0, !Cidr [ !GetAtt VPC.CidrBlock, 256, 8 ]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvPrefix} Subnet EKS
        - Key: !Sub  kubernetes.io/cluster/${EnvPrefix}
          Value: shared

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Select [ 1, !Cidr [ !GetAtt VPC.CidrBlock, 256, 8 ]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvPrefix} Subnet EKS
        - Key: !Sub  kubernetes.io/cluster/${EnvPrefix}
          Value: shared

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Select [ 2, !Cidr [ !GetAtt VPC.CidrBlock, 256, 8 ]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvPrefix} Subnet EKS
        - Key: !Sub  kubernetes.io/cluster/${EnvPrefix}
          Value: shared

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${EnvPrefix} Public Routes

  DefaultPublicRoute: 
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3

  DefaultSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: TODO
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 1025
          ToPort: 65535
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 1025
          ToPort: 65535
          CidrIp: 0.0.0.0/0

Outputs:

  VPC: 
    Description: TODO
    Value: !Ref VPC
    Export:
      Name: !Sub ${EnvPrefix}-VPCID

  VPCPublicRouteTable:
    Description: TODO
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub ${EnvPrefix}-PUBLIC-RT

  Subnets:
    Description: TODO
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2, !Ref PublicSubnet3]]
    Export:
      Name: !Sub ${EnvPrefix}-PUBLIC-NETS

  PublicSubnet1:
    Description: TODO
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${EnvPrefix}-PUBLIC1-SN

  PublicSubnet2:
    Description: TODO
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${EnvPrefix}-PUBLIC2-SN

  PublicSubnet3:
    Description: TODO
    Value: !Ref PublicSubnet3
    Export:
      Name: !Sub ${EnvPrefix}-PUBLIC3-SN

  DefaultSecurityGroupEKS:
    Description: TODO
    Value: !Ref DefaultSecurityGroup
    Export:
      Name: !Sub ${EnvPrefix}-EKS-SG
